@@ -79,6 +79,9 @@ Core and Builtins
 Library
 -------
 
+- tarfile.py: Correctly detect bzip2 compressed streams with blocksizes
+  other than 900k.
+
 - Issue #13439: Fix many errors in turtle docstrings.
 
 - Issue #12856: Ensure child processes do not inherit the parent's random
